--- a/HS_Choi/1주차 (1~4장).md
+++ b/HS_Choi/1주차 (1~4장).md
@@ -10,7 +10,7 @@
 ## 가정
 
 > 1. 개발은 반복주기를 토대로 진행돼야 한다.
-2. 개발자와 도메인 전문가는 밀접한 관계에 있어야 한다.
+> 2. 개발자와 도메인 전문가는 밀접한 관계에 있어야 한다.
 
 반복주기 → 지속적인 리팩토링 → 작은 재설계가 연속적으로 일어남 → agile
 
@@ -42,18 +42,18 @@
 ### DDD 에서 모델의 유용성
 
 > 1. 모델과 핵심 설계는 서로 영향을 주며 구체화된다.
-2. 모델은 모든 팀 구성원이 사용하는 언어의 중추다.
-3. 모델은 지식의 정수만을 뽑아낸 것이다.
+> 2. 모델은 모든 팀 구성원이 사용하는 언어의 중추다.
+> 3. 모델은 지식의 정수만을 뽑아낸 것이다.
 
 ## 01_지식 탐구
 
 ### 효과적인 모델링의 요소
 
 > 1. 모델과 구현의 연계
-2. **모델을 기반으로 하는 언어 정제**
-3. 풍부한 지식이 담긴 모델 개발
-4. 모델의 정제
-5. 브레인스토밍과 실험
+> 2. **모델을 기반으로 하는 언어 정제**
+> 3. 풍부한 지식이 담긴 모델 개발
+> 4. 모델의 정제
+> 5. 브레인스토밍과 실험
 
 - 폭포수 개발 방법의 경우
     - 업무 전문가 → 분석가 → 프로그래머
